--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,20 +86,21 @@ p {
     background-color: #2589bd;
 }
 
+/* consolidated the below three elements*/
 .benefit-lead, 
 .benefit-brand, 
 .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
+/* consolidated the below three elements*/
 .benefit-lead h3, 
 .benefit-brand h3, 
 .benefit-cost {
     margin-bottom: 10px;
     text-align: center;
 }
-
+/* consolidated the below three elements*/
 .benefit-lead img, 
 .benefit-brand img, 
 .benefit-cost img {
@@ -107,7 +108,7 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
-
+/* consolidated the below three elements*/
 .search-engine-optimization, 
 .online-reputation-management, 
 .social-media-marketing {
@@ -118,13 +119,13 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-
+/* consolidated the below three elements*/
 .search-engine-optimization img, 
 .online-reputation-management img, 
 .social-media-marketing img {
     max-height: 200px;
 }
-
+/* consolidated the below three elements*/
 .search-engine-optimization h2, 
 .online-reputation-management h2, 
 .social-media-marketing h2 {
